formula table added

--- a/Pages/PPFindex.html
+++ b/Pages/PPFindex.html
@@ -90,140 +90,153 @@
                       
                     </p>
                     <p>Where:</p>
-                    <ul>
-                      <li><strong>F</strong> is the maturity amount.</li>
-                      <li><strong>P</strong> is the annual deposit amount.</li>
-                      <li><strong>i</strong> is the interest rate.</li>
-                      <li><strong>n</strong> is the number of years.</li>
-                    </ul>
-
+                    <table style="border-collapse: collapse; width: 100%; border: 1px solid black;">
+                      <tbody>
+                          <tr>
+                              <td style="border: 1px solid black; padding: 8px;"><strong>F</strong></td>
+                              <td style="border: 1px solid black; padding: 8px;">Maturity amount</td>
+                          </tr>
+                          <tr>
+                              <td style="border: 1px solid black; padding: 8px;"><strong>P</strong></td>
+                              <td style="border: 1px solid black; padding: 8px;">Annual deposit amount</td>
+                          </tr>
+                          <tr>
+                              <td style="border: 1px solid black; padding: 8px;"><strong>i</strong></td>
+                              <td style="border: 1px solid black; padding: 8px;">Interest rate</td>
+                          </tr>
+                          <tr>
+                              <td style="border: 1px solid black; padding: 8px;"><strong>n</strong></td>
+                              <td style="border: 1px solid black; padding: 8px;">Number of years</td>
+                          </tr>
+                      </tbody>
+                  </table>
                     <h3>Example: How to Use the PPF Calculator</h3>
                     <p>Let's assume an individual invests ₹1,50,000 annually in their PPF account for a tenure of 15 years at an interest rate of 7.1%. Using the PPF account calculator, the maturity sum after 15 years will be ₹40,68,209.</p>
                     <p>The table below shows the growth of the investment:</p>
 
-                    <table border="1">
-                      <thead>
-                        <tr>
-                          <th>Year</th>
-                          <th>Opening Balance</th>
-                          <th>Annual Deposit</th>
-                          <th>Interest Earned</th>
-                          <th>Closing Balance</th>
-                          <th>Loan</th>
-                          <th>Amount Withdrawn</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>1</td>
-                          <td>0</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.11400</td>
-                          <td>Rs.161400</td>
-                          <td>0</td>
-                          <td>0</td>
-                        </tr>
-                        <tr>
-                          <td>2</td>
-                          <td>Rs.161400</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.23666</td>
-                          <td>Rs.335066</td>
-                          <td>0</td>
-                          <td>0</td>
-                        </tr>
-                        <tr>
-                          <td>3</td>
-                          <td>Rs.335066</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.36865</td>
-                          <td>Rs.521931</td>
-                          <td>Rs.40350</td>
-                          <td>0</td>
-                        </tr>
-                        <tr>
-                          <td>4</td>
-                          <td>Rs.521931</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.51067</td>
-                          <td>Rs.722998</td>
-                          <td>Rs.83767</td>
-                          <td>0</td>
-                        </tr>
-                        <tr>
-                          <td>5</td>
-                          <td>Rs.722998</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.66348</td>
-                          <td>Rs.939346</td>
-                          <td>Rs.130483</td>
-                          <td>0</td>
-                        </tr>
-                        <tr>
-                          <td>6</td>
-                          <td>Rs.939346</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.82790</td>
-                          <td>Rs.1172136</td>
-                          <td>Rs.180750</td>
-                          <td>0</td>
-                        </tr>
-                        <tr>
-                          <td>7</td>
-                          <td>Rs.1172136</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.100482</td>
-                          <td>Rs.1422618</td>
-                          <td>0</td>
-                          <td>Rs.260966</td>
-                        </tr>
-                        <tr>
-                          <td>8</td>
-                          <td>Rs.1422618</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.119519</td>
-                          <td>Rs.1692137</td>
-                          <td>0</td>
-                          <td>Rs.361499</td>
-                        </tr>
-                        <tr>
-                          <td>9</td>
-                          <td>Rs.1692137</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.140002</td>
-                          <td>Rs.1982139</td>
-                          <td>0</td>
-                          <td>Rs.469673</td>
-                        </tr>
-                        <tr>
-                          <td>10</td>
-                          <td>Rs.1982139</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.162043</td>
-                          <td>Rs.2294182</td>
-                          <td>0</td>
-                          <td>Rs.586068</td>
-                        </tr>
-                        <tr>
-                          <td>11</td>
-                          <td>Rs.2294182</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.185758</td>
-                          <td>Rs.2629940</td>
-                          <td>0</td>
-                          <td>Rs.711309</td>
-                        </tr>
-                        <tr>
-                          <td>12</td>
-                          <td>Rs.2629940</td>
-                          <td>Rs.150000</td>
-                          <td>Rs.211275</td>
-                          <td>Rs.2991215</td>
-                          <td>0</td>
-                          <td>Rs.846069</td>
-                        </tr>
-                      </tbody>
-                    </table>
+                    <table style="border-collapse: collapse; width: 100%; border: 1px solid black;">
+                        <thead>
+                          <tr>
+                            <th style="border: 1px solid black; padding: 8px;">Year</th>
+                            <th style="border: 1px solid black; padding: 8px;">Opening Balance</th>
+                            <th style="border: 1px solid black; padding: 8px;">Annual Deposit</th>
+                            <th style="border: 1px solid black; padding: 8px;">Interest Earned</th>
+                            <th style="border: 1px solid black; padding: 8px;">Closing Balance</th>
+                            <th style="border: 1px solid black; padding: 8px;">Loan</th>
+                            <th style="border: 1px solid black; padding: 8px;">Amount Withdrawn</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">1</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.11400</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.161400</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">2</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.161400</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.23666</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.335066</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">3</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.335066</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.36865</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.521931</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.40350</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">4</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.521931</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.51067</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.722998</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.83767</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">5</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.722998</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.66348</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.939346</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.130483</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">6</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.939346</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.82790</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.1172136</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.180750</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">7</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.1172136</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.100482</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.1422618</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.260966</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">8</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.1422618</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.119519</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.1692137</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.361499</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">9</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.1692137</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.140002</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.1982139</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.469673</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">10</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.1982139</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.162043</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.2294182</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.586068</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">11</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.2294182</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.185758</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.2629940</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.711309</td>
+                          </tr>
+                          <tr>
+                            <td style="border: 1px solid black; padding: 8px;">12</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.2629940</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.150000</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.211275</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.2991215</td>
+                            <td style="border: 1px solid black; padding: 8px;">0</td>
+                            <td style="border: 1px solid black; padding: 8px;">Rs.846069</td>
+                          </tr>
+                        </tbody>
+                      </table>
 
                     <h3>How to Use the PPF Calculator?</h3>
                     <p>Using the <strong>PPF calculator</strong> online is simple. Here's how you can calculate your returns:</p>
