--- a/Pages/cagrIndex.html
+++ b/Pages/cagrIndex.html
@@ -67,20 +67,20 @@
                 <p>The CAGR formula is:</p>
                 <p><strong>CAGR = (FV / PV) ^ (1 / n) – 1</strong></p>
                 <p>Where:</p>
-                <table>
+                <table style="border-collapse: collapse; width: 100%; border: 1px solid black;">
                     </thead>
-                    <tbody>
+                    <tbody >
                         <tr>
-                            <td><strong>FV:</strong></td>
-                            <td>Future Value</td>
+                            <td style="border: 1px solid black; padding: 8px;"><strong>FV:</strong></td>
+                            <td style="border: 1px solid black; padding: 8px;">Future Value</td>
                         </tr>
                         <tr>
-                            <td><strong>PV:</strong></td>
-                            <td>Present Value</td>
+                            <td style="border: 1px solid black; padding: 8px;"><strong>PV:</strong></td>
+                            <td style="border: 1px solid black; padding: 8px;">Present Value</td>
                         </tr>
                         <tr>
-                            <td><strong>n:</strong></td>
-                            <td>Time Period in Years</td>
+                            <td style="border: 1px solid black; padding: 8px;"><strong>n:</strong></td>
+                            <td style="border: 1px solid black; padding: 8px;">Time Period in Years</td>
                         </tr>
                     </tbody>
                 </table>
