--- a/Pages/emiIndex.html
+++ b/Pages/emiIndex.html
@@ -75,28 +75,28 @@
                     </ul>
 
                     <h3>EMI Calculation Formula</h3>
-                    <p>Groww’s EMI formula is widely used across loan calculators:</p>
+                    <p>EMI formula is widely used across loan calculators:</p>
                     <p><strong>EMI = [P × R × (1 + R) ^ N] / [(1 + R) ^ (N - 1)]</strong></p>
                     <p>Where:</p>
-                    <table>
+                    <table style="border-collapse: collapse; width: 100%; border: 1px solid black;">
                         <thead>
                             <tr>
-                                <th>Term</th>
-                                <th>Definition</th>
+                                <th style="border: 1px solid black; padding: 8px;">Term</th>
+                                <th style="border: 1px solid black; padding: 8px;">Definition</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>P</td>
-                                <td>Principal loan amount</td>
+                                <td style="border: 1px solid black; padding: 8px;">P</td>
+                                <td style="border: 1px solid black; padding: 8px;">Principal loan amount</td>
                             </tr>
                             <tr>
-                                <td>R</td>
-                                <td>Rate of interest per month</td>
+                                <td style="border: 1px solid black; padding: 8px;">R</td>
+                                <td style="border: 1px solid black; padding: 8px;">Rate of interest per month</td>
                             </tr>
                             <tr>
-                                <td>N</td>
-                                <td>Loan tenure (in months)</td>
+                                <td style="border: 1px solid black; padding: 8px;">N</td>
+                                <td style="border: 1px solid black; padding: 8px;">Loan tenure (in months)</td>
                             </tr>
                         </tbody>
                     </table>
