--- a/Pages/gratuityIndex.html
+++ b/Pages/gratuityIndex.html
@@ -52,35 +52,31 @@
                         <p>The gratuity calculation formula used by Ashiana Housing’s online tool is:</p>
                         <p><strong>G = n × b × 15 / 26</strong></p>
                         <p>Where:</p>
-                        <table>
+                        <table style="border-collapse: collapse; width: 100%; border: 1px solid black;">
                             <tbody>
                                 <tr>
-                                    <td><strong>n</strong></td>
-                                    <td>=</td>
-                                    <td>Number of years of service</td>
+                                    <td style="border: 1px solid black; padding: 8px;"><strong>n</strong></td>
+                                    <td style="border: 1px solid black; padding: 8px;">Number of years of service</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>b</strong></td>
-                                    <td>=</td>
-                                    <td>Last drawn basic salary + Dearness Allowance (DA)</td>
+                                    <td style="border: 1px solid black; padding: 8px;"><strong>b</strong></td>
+                                    <td style="border: 1px solid black; padding: 8px;">Last drawn basic salary + Dearness Allowance (DA)</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>15</strong></td>
-                                    <td>=</td>
-                                    <td>Constant factor</td>
+                                    <td style="border: 1px solid black; padding: 8px;"><strong>15</strong></td>
+                                    <td style="border: 1px solid black; padding: 8px;">Constant factor</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>26</strong></td>
-                                    <td>=</td>
-                                    <td>Total working days in a month</td>
+                                    <td style="border: 1px solid black; padding: 8px;"><strong>26</strong></td>
+                                    <td style="border: 1px solid black; padding: 8px;">Total working days in a month</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>G</strong></td>
-                                    <td>=</td>
-                                    <td>Gratuity amount</td>
+                                    <td style="border: 1px solid black; padding: 8px;"><strong>G</strong></td>
+                                    <td style="border: 1px solid black; padding: 8px;">Gratuity amount</td>
                                 </tr>
                             </tbody>
                         </table>
+
                         <p>For instance, if you’ve worked for 5 years with a monthly salary (including DA) of Rs. 30,000, the gratuity amount would be:</p>
                         <p><strong>G = 5 × 30,000 × 15 / 26 = Rs. 86,538.46</strong></p>
                         <h3>Key Factors of Gratuity</h3>
