--- a/Pages/homeEMIindex.html
+++ b/Pages/homeEMIindex.html
@@ -67,11 +67,23 @@
                 <p>To calculate the EMI for a home loan, a standard formula is used:</p>
                 <p><strong>EMI = [P x R x (1+R) ^ N] / [(1+R) ^ N - 1]</strong></p>
                 <p>Where:</p>
-                <ul>
-                    <li><strong>P</strong> = Principal loan amount</li>
-                    <li><strong>R</strong> = Rate of interest per month</li>
-                    <li><strong>N</strong> = Loan tenure (in months)</li>
-                </ul>
+                <table style="border-collapse: collapse; width: 100%; border: 1px solid black;">
+                    <tbody>
+                        <tr>
+                            <td style="border: 1px solid black; padding: 8px;"><strong>P</strong></td>
+                            <td style="border: 1px solid black; padding: 8px;">Principal loan amount</td>
+                        </tr>
+                        <tr>
+                            <td style="border: 1px solid black; padding: 8px;"><strong>R</strong></td>
+                            <td style="border: 1px solid black; padding: 8px;">Rate of interest per month</td>
+                        </tr>
+                        <tr>
+                            <td style="border: 1px solid black; padding: 8px;"><strong>N</strong></td>
+                            <td style="border: 1px solid black; padding: 8px;">Loan tenure (in months)</td>
+                        </tr>
+                    </tbody>
+                </table>
+
                 <p>Let’s take an example: If you avail a home loan of ₹1 crore for a tenure of 15 years at an interest rate of 12%, using this formula, the EMI would be approximately ₹1,10,108.</p>
 
                 <p>It’s important to note that the EMI has two components: the principal and the interest. Initially, the interest component is higher, and as you continue paying off your loan, the principal component gradually increases, while the interest component decreases.</p>
